--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "react-icons": "^4.6.0",
