--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
+    "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "tailwindcss": "^3.2.4"
